Using Docker overlay networks was causing horrible issues (once a second node joined the cluster, the first host froze completely). Removed overlay networks entirely, and exposing ports on the hosts

--- a/sources/docker-mariadb-galera.service
+++ b/sources/docker-mariadb-galera.service
@@ -1,13 +1,13 @@
 [Unit]
 Description=MariaDB with Galera Cluster
 
-Requires=docker.service docker-overlay-network.service
+Requires=docker.service
 Wants=network-online.target
-After=docker.service docker-overlay-network.service network-online.target
+After=docker.service network-online.target
 
 [Service]
 Restart=always
-RestartSec=1
+RestartSec=3
 TimeoutStartSec=0
 
 ExecStartPre=/usr/bin/chmod +x /opt/bin/docker-mariadb-galera.sh
@@ -16,8 +16,8 @@ ExecStart=/opt/bin/docker-mariadb-galera.sh
 ExecStop=/bin/bash -c " \
   HOSTNAME=$(/bin/hostname) \
   HOSTNUM=$(/bin/expr $HOSTNAME : '.*\\([0-9]\\)') \
-  /usr/bin/docker stop mariadb-node-$HOSTNUM || true \
-  /usr/bin/docker rm mariadb-node-$HOSTNUM || true \
+  /usr/bin/docker stop mariadb-container-$HOSTNUM || true \
+  /usr/bin/docker rm mariadb-container-$HOSTNUM || true \
 "
 
 [Install]
