--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "author": "Alessandro Segala",
   "license": "Unlicense",
   "dependencies": {
-    "co": "^4.6.0",
     "js-yaml": "^3.5.0",
-    "minimist": "^1.2.0",
-    "mz": "^2.3.1",
-    "request-promise": "^2.0.0"
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^5.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-html-build": "^0.5.3",
   }
 }
