--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-# Output files
-azuredeploy.parameters.json
-cloud-config.yaml
-cloud-config.yaml.b64
-generator.html
+# Intermediary build files
 sources/app.build.js
 sources/cloud-config.pack.json
 
