--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Alessandro Segala",
   "license": "MIT",
   "scripts": {
-    "build": "./node_modules/.bin/grunt"
+    "build": "./node_modules/.bin/grunt default",
+    "watch": "./node_modules/.bin/grunt default watch"
   },
   "dependencies": {
     "co": "^4.6.0",
